# i2c_tools

./: CMakeLists.txt  Readme.md
linux/: CMakeLists.txt  Readme.md
linux/i2c-tools/: CMakeLists.txt
linux/i2c-tools/eeprog/: 24cXX.c  CMakeLists.txt
linux/i2c-tools/eeprom/: CMakeLists.txt
linux/i2c-tools/lib/: CMakeLists.txt
linux/i2c-tools/py-smbus/: CMakeLists.txt
linux/i2c-tools/stub/: CMakeLists.txt
linux/i2c-tools/tools/: CMakeLists.txt
linux/i2c-tools_cmake/: CMakeLists.txt
linux/i2c-tools_cmake/include/: CMakeLists.txt
linux/i2c-tools_cmake/lib/: CMakeLists.txt
windows/: CMakeLists.txt
windows/wintar/: WinRing0.rar  openhardwaremonitor.rar
windows/wintar/notes/WinRing0_1_3_1b/source/: WinRing0_2010.sln
windows/wintar/notes/WinRing0_1_3_1b/source/dll/: OlsApiInit.h  OlsApiInitDef.h  WinRing0_2010.vcxproj
windows/wintar/notes/WinRing0_1_3_1b/source/sample/Cpp/: OlsSample_2010.vcxproj
windows/wintar/notes/WinRing0_1_3_1b/source/sample/Cs/: WinRing0SampleCs.csproj
windows/wintar/notes/WinRing0_1_3_1b/source/sample/Cs/Properties/: Resources.Designer.cs  Settings.Designer.cs  uac.manifest
