# limit cmakeminimum version 
cmake_minimum_required(VERSION 3.1)

# OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE 755
# OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ 644
# install
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/decode-dimms ${CMAKE_CURRENT_SOURCE_DIR}/decode-vaio ${CMAKE_CURRENT_SOURCE_DIR}/ddcmon ${CMAKE_CURRENT_SOURCE_DIR}/decode-edid
        DESTINATION "${BINDIR}"
        PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/decode-dimms.1 ${CMAKE_CURRENT_SOURCE_DIR}/decode-vaio.1
        DESTINATION "${MANDIR}/man1"
        PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)

# uninstall
# todo...